manifests/operator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivemq-operator
  namespace: hivemq
  labels:
    app: hivemq-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hivemq-operator
  template:
    metadata:
      labels:
        app: hivemq-operator
        operator: hivemq-operator
    spec:
      containers:
        - image: hivemq/hivemq-operator:0.2.0
          imagePullPolicy: IfNotPresent
          name: operator
          resources:
            limits:
              cpu: 800m
              memory: 512M
            requests:
              cpu: 200m
              memory: 512M
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          ports:
            - name: https
              containerPort: 443
              protocol: TCP
      restartPolicy: Always
      serviceAccountName: hivemq-operator
