manifests/operator/admissionhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: hivemq-operator-validation
  labels:
    app: hivemq
webhooks:
  - name: "hivemq-cluster-policy.hivemq.com"
    rules:
      - apiGroups:
          - "hivemq.com"
        apiVersions:
          - "v1"
        operations:
          - CREATE
          - UPDATE
        resources:
          - "hivemq-clusters"
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: hivemq
        name: hivemq-operator
        port: 443
        path: /api/v1/validate/hivemq-clusters
    admissionReviewVersions:
      - "v1"
      - "v1beta1"
    sideEffects: None
    timeoutSeconds: 30
